--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tauri": "tauri"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.0.8",
     "@lmstudio/sdk": "^0.4.2",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tauri-apps/plugin-shell": "^2.2.0",
     "ai": "^4.0.14",
     "better-sqlite3": "^11.7.0",
     "class-variance-authority": "^0.7.1",
@@ -22,6 +24,7 @@
     "lucide-react": "^0.468.0",
     "mongodb": "^6.12.0",
     "next": "15.1.0",
+    "openai": "^4.76.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
@@ -31,6 +34,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tauri-apps/api": "^2.1.1",
+    "@tauri-apps/cli": "^2.1.0",
     "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^22.10.2",
     "@types/react": "^19",
